Added desktop responsiveness.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@
 
 body {
     background-color: var(--violet);
-    background-image: url('/images/bg-mobile.svg');
     background-repeat: no-repeat;
 }
 
@@ -23,13 +22,21 @@ body {
 .article-body p {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    color: white;
+    color: rgba(235, 231, 231, 0.925);
 }
 
 .btn-register {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     color: var(--violet);
     border: none;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.logo {
+    border: 1px solid white;
+    padding: 5px;
+    border-radius: 50%;
 }
 
 /* Heading font-family: 'Open Sans', sans-serif;
@@ -38,6 +45,10 @@ body {
 Body font-family: 'Poppins', sans-serif; */
 
 @media screen and (min-width: 350px) and (max-width: 750px) {
+    body {
+        background-image: url('/images/bg-mobile.svg');  
+    }
+
     section {
         height: 100vh;
         
@@ -108,13 +119,72 @@ Body font-family: 'Poppins', sans-serif; */
 
 @media screen and (min-width: 950px) and (max-width: 1500px) {
     body {
-        width: 100vw;
+        background-image: url('/images/bg-desktop.svg');
     }
+
     section {
         height: 100%;
         display: grid;
         grid-auto-flow: row;
         grid-template-rows: 10% 80% 10%;
+        row-gap: 30px;
+
+        padding: 30px;
+    }
+
+    article {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+        column-gap: 80px;
+        
+        height: 100%
+    }
+
+    .article-body {
+        margin: 40px auto 0;
+        align-self: flex-start;
+    }
+
+    .article-body h1 {
+        font-size: 2.2rem;
+        width: 75%;
+    }
+
+    .article-body p {
+        margin-top: 40px;
+        width: 90%;
+    }
+
+    .article-body button {
+        margin-top: 30px;
+        width: 150px;
+        height: 45px;
+    }
+
+    .btn-register:hover {
+        background-color: var(--soft-magenta);
+        color: white;
+    }
+
+    footer {
+        justify-self: flex-end;
+        margin-right: 40px;
+
+        display: flex;
+        gap: 15px;
+    }
+
+    .logo {
+        width: 25px;
+        height: 20px;
+    }
+
+    .logo:hover {
+        cursor: pointer;
+        border: 1px solid var(--soft-magenta);
+        filter: opacity(0.5) drop-shadow(0 0 0 var(--soft-magenta));
     }
 }
 
